# openhuman

./: .env.example  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Dockerfile  README.md  package.json  plan.md  pnpm-lock.yaml  rust-toolchain.toml
.agents/agents/: ship-and-babysit.md
.claude/commands/: ship-and-babysit.md
.codex/commands/: ship-and-babysit.md
.codex/skills/ship-and-babysit/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  task.md
.github/workflows/: android-compile.yml  build-desktop.yml  ci-full.yml  ci-lite.yml  e2e-agent-review.yml  e2e-playwright.yml  e2e-reusable.yml  e2e.yml  ios-appstore.yml  ios-compile.yml  pr-ci.yml  prepare-release-pr.yml  promote-main-to-release.yml  release-ci.yml  release-notes-preview.yml  release-packages.yml  release-production.yml  release-staging.yml  test-reusable.yml
app/: package.json
app/scripts/: e2e-run-all-flows.sh
app/src/: AppRoutes.auth.test.tsx  AppRoutes.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri-mobile/: Cargo.toml  package.json  tauri.conf.json
app/src-tauri/src/: app_update.rs  cef_stale_reap.rs  core_process_tests.rs  deep_link_ipc.rs  lib.rs  lib_tests.rs  local_data_reset.rs
app/src/components/: LanguageSelect.tsx
app/src/config/: navConfig.ts
app/src/hooks/: useCostDashboard.ts  useFlowRunPoller.ts  useFlowRunProgress.test.ts  useFlowRunProgress.ts  useSubconscious.ts  useUsageState.test.ts  useUsageState.ts  useWorkflowBuilderChat.test.ts  useWorkflowBuilderChat.ts
app/src/pages/: Accounts.tsx  Conversations.tsx  FlowCanvasPage.tsx  FlowsPage.test.tsx  FlowsPage.tsx  Intelligence.tsx  Rewards.tsx  Settings.tsx  Skills.tsx
app/src/providers/: ChatRuntimeProvider.tsx
app/src/services/: backendMeetService.test.ts  chatService.ts  rpcMethods.ts
app/src/store/: chatRuntimeSlice.ts
app/src/test/: test-utils.tsx
app/src/types/: rewards.ts  turnState.ts
app/src/utils/: ollamaUrlValidation.test.ts  ollamaUrlValidation.ts  toolTimelineFormatting.ts
app/test/: vitest.config.ts
docs/: README.de.md  README.ja-JP.md  README.ko.md  README.ur-pk.md  README.zh-CN.md  RELEASE-MANUAL-SMOKE.md  TEST-COVERAGE-MATRIX.md  tinyagents-harness-migration-audit.md  tinyagents-migration-spec.md  tinyagents-sdk-gaps.md  tinyagents-session-migration-design.md
docs/plans/: tinychannels-integration.md
docs/superpowers/plans/: 2026-06-12-agentbox-marketplace-integration.md
docs/superpowers/specs/: 2026-06-12-agentbox-marketplace-integration-design.md
docs/tinyagents-full-migration-plan/: 00-baseline.md  09-embeddings.md  10-registry.md  11-testing.md  99-deletion-ledger.md  C2b-todos-parity.md  C4-journal-progress-parity-plan.md  CONTINUATION-2026-07.md  HANDOFF-2026-07-03.md  README.md
docs/tinyagents-full-migration-plan/01-tooling/: 01-tool-policy.md  02-unknown-tool.md  03-dynamic-exposure.md  04-tool-output.md  README.md
docs/tinyagents-full-migration-plan/02-models/: 01-model-registry.md  02-fallback-retry.md  03-streaming-reasoning.md  04-catalog.md  README.md
docs/tinyagents-full-migration-plan/03-context-cache/: 01-delete-legacy-context.md  02-cache-layer.md  README.md
docs/tinyagents-full-migration-plan/04-sessions/: 01-live-writes.md  02-read-cutover.md  03-checkpointer.md  README.md
docs/tinyagents-full-migration-plan/05-events/: 01-journals.md  02-bridge-consolidation.md  03-domainevent-projection.md  README.md
docs/tinyagents-vendor-improvement-plan/: 00-audit-harness.md  01-audit-tinyagents.md  02-reasoning-thought-tokens.md  03-streaming.md  04-performance.md  05-anthropic-prompt-caching.md  06-upstream-extraction.md  07-execution-order.md  README.md
gitbooks/: README.md  SUMMARY.md
gitbooks/developing/: README.md  agentbox-deployment.md  e2e-testing.md  release-policy.md
gitbooks/features/: channels.md  orchestration.md  privacy-mode.md  subconscious.md  tinyplace.md  token-compression.md  workflows.md
gitbooks/features/mascot/: meeting-agents.md
gitbooks/guides/: README.md  child-safe-companion.md  connect-obsidian.md  doctor-assistant.md  local-model.md  move-to-new-pc.md  organize-project-folders.md  personal-assistant.md  privacy-sensitive-data.md  recover-failed-installation.md
gitbooks/overview/: getting-started.md
scripts/: android-init.sh  ci-cancel-aware.sh  i18n-find-english.ts  live-flows-demo.sh  test-rust-e2e.sh  verify-i18n-bundle.mjs
scripts/ci/: rust-coverage-changed.sh  vitest-changed-coverage.sh
scripts/mock-api/: chaos.test.mjs  server.mjs
scripts/release/: bump-version.js  merge-release-into-main.sh  require-ci-full-gate.sh  upload-android-to-play.sh  verify-version-sync.js
src/api/: config.rs  rest.rs  rest_tests.rs
src/core/: all.rs  auth.rs  jsonrpc.rs  observability.rs  socketio.rs
src/openhuman/: mod.rs
tests/: agent_archivist_debug_round21_raw_coverage_e2e.rs  agent_harness_e2e.rs  agent_harness_leftovers_raw_coverage_e2e.rs  agent_harness_public.rs  agent_harness_raw_coverage_e2e.rs  agent_large_round25_raw_coverage_e2e.rs  agent_memory_loader_public.rs  agent_prompts_subagent_raw_coverage_e2e.rs  agent_round26_raw_coverage_e2e.rs  agent_session_round24_raw_coverage_e2e.rs  agent_session_turn_raw_coverage_e2e.rs  agent_tool_loop_raw_coverage_e2e.rs  agent_turn_builder_leftovers_raw_coverage_e2e.rs  agent_turn_toolloop_round22_raw_coverage_e2e.rs  agentbox_e2e.rs  calendar_grounding_e2e.rs  channels_bus_presentation_raw_coverage_e2e.rs  channels_provider_leftovers_raw_coverage_e2e.rs  composio_list_tools_stack_overflow_regression.rs  composio_raw_coverage_e2e.rs  config_auth_app_state_connectivity_e2e.rs  inference_agent_raw_coverage_e2e.rs  json_rpc_e2e.rs  linux_cef_deb_runtime_e2e.rs  live_flows_demo_e2e.rs  memory_core_threads_raw_coverage_e2e.rs  memory_sync_slack_bus_raw_coverage_e2e.rs  memory_sync_sources_raw_coverage_e2e.rs  memory_sync_tree_round21_raw_coverage_e2e.rs  memory_threads_raw_coverage_e2e.rs  memory_tree_sync_deep_raw_coverage_e2e.rs  subconscious_e2e.rs  tools_agent_credentials_state_raw_coverage_e2e.rs  x402_twit_sh_live.rs
(+975 files in other folders)
